# my-code

cpp/cpp-demos/: .gitignore  CMakeLists.txt
cpp/cpp-demos/demos/core_guidelines/c_class_类/: c1_概要规则_struct优化接口入参.cpp
cpp/cpp-demos/demos/core_guidelines/f_function_函数/: f15~f16_参数传递_入与出_考虑参数传递的开销.cpp  f19_参数传递_入与出_转发参数.cpp  f4_函数定义_constexpr声明需要在编译期求值的函数.cpp
cpp/cpp-demos/demos/core_guidelines/i_interface_接口/: dependendyInjection.cpp  i13_不要用单个指针来传递数组.cpp  i27_编程技巧PImpl.cpp  i2_避免非const的全局变量_初始化顺序问题.cpp  i2_避免非const的全局变量_多线程数据竞争.cpp  i2_避免非const的全局变量_谁改了全局变量.cpp  i3_尽量避免使用单例模式.cpp
cpp/cpp-demos/demos/core_guidelines/p_philosophy_理念/: p1&p9&p11&p13_标准库优先原则.cpp  p4_类型安全_array_decay问题.cpp  p4_类型安全_narrowing_conversion.cpp  p4_类型安全_用tempalte代替cast.cpp  p4_类型安全_用variant代替union.cpp  p5~p7_编译期检查优先于运行期检查.cpp
cpp/cpp-demos/demos/core_guidelines/r_resource_资源管理/: r10_内存分配与释放_避免malloc和free.cpp  r11_内存分配与释放_避免显式调用new和delete.cpp  r12_内存分配与释放_NNN规则.cpp  r13_内存分配与释放_显式资源分配的约束.cpp  r1_通用规则_RAII.cpp  r3~r4_通用规则_所有权.cpp  r5_通用规则_优先使用有作用域的对象.cpp
python/gdal-demos/: main.py  plt_show_mosaic.py  raster-io.py
python/gdal-demos/scripts/: clip_raster_by_polygon.py
python/gdal-demos/utils/: plt_utils.py
rust/rust-learning/: Cargo.toml
rust/rust-learning/basics/data_type/data_type_scalar/: Cargo.toml
rust/rust-learning/basics/data_type/data_type_string/: Cargo.toml
rust/rust-learning/basics/data_type_compound/: Cargo.toml
rust/rust-learning/basics/ownership_basic/: Cargo.toml
rust/rust-learning/basics/variables_mutable/: Cargo.toml
(+44 files in other folders)
